tests/snapshots/examples_fixtures/repros__sort_by_string_len.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/repros/sort_by_string_len.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/repros/sort_by_string_len.flx:4:5
  |
4 |     print(to_string(List.sort_by(["bb", "a", "ccc"], fn(s) { string_len(s) })))
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
